# local_excavation

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: excavation_planning.yaml
include/: ExcavationPlanning.h  ExcavationPlanningRos.h
include/local_excavation/: LocalPlanner.hpp  csvfile.h  planning_utils.h
src/: ExcavationPlanning.cpp  ExcavationPlanningRos.cpp  LocalPlanner.cpp  LocalPlanner_w.cpp
srv/: DigDumpSrv.srv
test/: test_local_excavation.cpp  test_local_excavation.launch
