<?xml version="1.0"?>
<package format="2">
  <name>local_excavation</name>
  <version>0.0.0</version>
  <description>The local_excavation package</description>
  <maintainer email="lorenzoterenzi96@gmail.com">lorenzo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_cv</depend>
  <depend>grid_map_pcl</depend>
  <depend>grid_map_sdf</depend>>
  <depend>grid_map_core</depend>
  <depend>m545_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pcl_ros</depend>
  <depend>kindr_ros</depend>
  <depend>signal_logger</depend>
  <depend>tinyxml_tools</depend>
  <depend>curves</depend>
  <depend>loco_m545</depend>
  <depend>excavation_mapping</depend>
  <depend>clang_tools</depend>
  <depend>grid_map_visualization</depend>
  <depend>liblapack-dev</depend>
  <depend>geometry_msgs</depend>
</package>
